# confined-shell-wip

./: README.md  bors.toml
.github/workflows/: close-snap.yml  mir-libs-build.yml  snap.yml
egmde/: eglauncher.cpp  open_desktop_entry.cpp  open_desktop_entry.h
env/: CMakeLists.txt  env-main.cpp
glue/usr/share/wayland-sessions/: confined-shell.desktop
snap/: snapcraft.yaml
snap/hooks/: configure  connect-plug-graphics-core22  install  post-refresh
snap/local/: plugs.json
